--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,17 +253,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (min-width: 992px) {
-  #hero {
-    padding-left: 160px;
-  }
+
 
   #hero .container{
-    padding-left: 25%;
+    /* padding-left: 25%; - Removed for proper centering */
     padding-top: 2%;
   }
-   .aws img{
-    padding-left: 78px;
-  } 
+   /* .aws img padding removed - using new certification layout */
 }
 
 #hero:before {
